<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="header_playlist_maker">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="header_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_text_header">Поиск</string>
    <string name="search_hint_edit_text">Поиск</string>
    <string name="user_agreement_practicum">https://yandex.ru/legal/practicum_offer</string>
    <string name="write_support_email_subject_practicum">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_support_email_body_practicum">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="write_support_my_email_practicum">Denica5@yandex.ru</string>
    <string name="share_text_practicum">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="failed_search">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="button_refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_search">Вы искали</string>
    <string name="label_track_duration_media_player">Длительность</string>
    <string name="label_track_album_media_player">Альбом</string>
    <string name="label_track_year_media_player">Год</string>
    <string name="label_track_genre_media_player">Жанр</string>
    <string name="label_track_country_media_player">Страна</string>
    <string name="media_library_text_header">Медиатека</string>
    <string name="media_library_favourite_tracks_label">Избранные треки</string>
    <string name="media_library_playlists_label">Плейлисты</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media_library_favourite_tracks_empty">Ваша медиатека пуста</string>
    <string name="media_library_playlists_empty">Вы не создали ни одного плейлиста</string>
    <string name="media_library_button_add_new_playlist">Новый плейлист</string>
    <string name="create_playlist_header">Новый плейлист</string>
    <string name="create_playlist_label_button_create">Создать</string>
    <string name="create_playlist_alert_neutral_button_text">Отмена</string>
    <string name="create_playlist_description_label">Описание</string>
    <string name="create_playlist_name_label">Название</string>
    <string name="create_playlist_alert_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist_alert_positive_button">Завершить</string>
    <string name="create_playlist_create_succes">Плейлист %1$s создан</string>
    <string name="media_player_track_deleted_from_playelist">Трек Удален</string>
    <string name="media_player_track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="media_player_error_to_interact_with_playlist">Произошла ошибка</string>
    <string name="playlist_track_pluralize_11_19">%1$d треков</string>
    <string name="playlist_track_pluralize_1">%1$d трек</string>
    <string name="playlist_track_pluralize_2_4">%1$d трека</string>
    <string name="playlist_track_pluralize_last">%1$d треков</string>
    <string name="media_player_track_already_in_playlist">Трек Уже Добавлен в плейлист %1$s</string>
    <string name="all_tracks_duration_playlist_detail">%1$s минут</string>
    <string name="tracks_count_playlist_detail">%1$d треков</string>
    <string name="playlist_dont_have_tracks_playlist_detail">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist_fragment">Поделиться</string>
    <string name="edit_text_overflow_menu_bottom_sheet_playlist_detail">Редактировать информацию</string>
    <string name="delete_playlist_overflow_menu_bottom_sheet_playlist_detail">Удалить плейлист</string>
    <string name="delete_track_from_playlist_alert_playlist_detail">Хотите удалить трек?</string>
    <string name="delete_playlist_alert_playlist_detail">Хотите удалить плейлист «%1$s»?</string>
    <string name="playlist_header_edit_edit_fragment">Редактировать</string>
    <string name="save_edit_playlist_button_edit_fragment">Сохранить</string>
    <string name="negative_button_alert_playlist_detail">Нет</string>
    <string name="positive_button_alert_playlist_detail">Да</string>
    <string name="empty_tracks_placeholder_bottom_sheet_playlist_detail">В этом плейлисте нету треков</string>
</resources>
