<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_medium"
        android:paddingStart="16dp"
        android:paddingTop="14dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/header_settings"
        android:textColor="#1A1B22"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:paddingTop="21dp"
            android:paddingEnd="16dp"
            android:paddingBottom="21dp"
            android:text="@string/dark_theme"
            android:textColor="#1A1B22"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="true"
            android:paddingStart="18dp"
            android:paddingTop="21dp"
            android:paddingEnd="18dp"
            android:paddingBottom="22dp"
            app:theme="@style/Color1SwitchStyle"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:paddingTop="22dp"
            android:paddingEnd="16dp"
            android:paddingBottom="21dp"
            android:text="@string/share_app"
            android:textColor="#1A1B22"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="false"
            android:paddingStart="16dp"
            android:paddingTop="22dp"
            android:paddingEnd="16dp"
            android:paddingBottom="22dp"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:paddingTop="21dp"
            android:paddingEnd="16dp"
            android:paddingBottom="21dp"
            android:text="@string/write_support"
            android:textColor="#1A1B22"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingStart="14dp"
            android:paddingTop="22dp"
            android:paddingEnd="14dp"
            android:paddingBottom="21dp"
            android:src="@drawable/ic_support"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:paddingTop="21dp"
            android:paddingEnd="16dp"
            android:paddingBottom="21dp"
            android:text="@string/user_agreement"
            android:textColor="#1A1B22"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="false"
            android:paddingStart="20dp"
            android:paddingTop="24dp"
            android:paddingEnd="20dp"
            android:paddingBottom="23dp"
            android:src="@drawable/ic_arrow_forward"

            />

    </LinearLayout>
</LinearLayout>

