<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    style="@style/SettingsLayout"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_header"
        style="@style/SettingsHeaderStyle"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/search_text_header" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">


        <EditText
            android:id="@+id/search_edit_text"
            style="@style/SearchEditTextStyle"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/search_clear_ic_x"
            style="@style/SearchClearIcXStyle"
            android:background="@android:color/transparent"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/not_found_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:drawableTop="@drawable/ic_not_found"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:paddingTop="102dp"
            android:text="@string/nothing_found"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="400"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/failed_search_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:drawableTop="@drawable/ic_failed_search"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:paddingHorizontal="24dp"
            android:paddingTop="102dp"
            android:text="@string/failed_search"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="400"
            android:textSize="19sp" />

        <Button
            android:id="@+id/button_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/button_refresh"
            android:textColor="?attr/colorSecondary"
            android:textFontWeight="500"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list_rc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/track_item" />

</LinearLayout>
