<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mediaLibrary.ui.playlist.createplaylist.CreatePlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/create_playlist_header"
        style="@style/HeaderStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/create_playlist_header" />

    <ImageView
        android:id="@+id/create_playlist_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_add_photo_create_playlist"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_playlist_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_playlist_name_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextInputLayoutHintTextAppearance"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/text_input_color"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        android:hint="@string/create_playlist_name_label"
        app:hintTextColor="@color/blue"
        app:hintTextAppearance="@style/TextInputLayoutHintTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_playlist_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_playlist_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            tools:text="sadasda" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_playlist_description_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/create_playlist_description_label"
        android:textAppearance="@style/TextInputLayoutTextAppearance"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/text_input_color"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:hintTextAppearance="@style/TextInputLayoutHintTextAppearance"
        app:hintTextColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_playlist_name_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/create_playlist_description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="?attr/colorOnSecondary"

            tools:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/create_playlist_button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_corner_create_playlist_button"
        android:enabled="false"
        android:text="@string/create_playlist_label_button_create"
        android:textColor="@color/white"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>