<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlist_detail_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mediaLibrary.ui.playlist.playlistdetail.PlaylistDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playlist_detail_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_playlist_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_track_placeholder" />

        <ImageView
            android:id="@+id/arrow_back_playlist_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_playlist_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_playlist_detail"
            tools:text="Best songs 2021" />

        <TextView
            android:id="@+id/description_playlist_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/name_playlist_detail"
            tools:text="2022" />

        <TextView
            android:id="@+id/all_tracks_duration_playlist_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"

            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tracks_count_paylist_detail"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_playlist_detail"
            tools:text="300 минут" />

        <TextView
            android:id="@+id/tracks_count_paylist_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/dot"
            app:drawableTint="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@id/all_tracks_duration_playlist_detail"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/all_tracks_duration_playlist_detail"
            app:layout_constraintTop_toBottomOf="@id/description_playlist_detail"
            tools:text="98 треков" />

        <ImageView
            android:id="@+id/ic_share_playlist_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="3dp"
            android:src="@drawable/ic_share"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/all_tracks_duration_playlist_detail"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/ic_overflow_menu_playlist_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_overflow_menu"
            app:layout_constraintStart_toEndOf="@id/ic_share_playlist_detail"
            app:layout_constraintTop_toBottomOf="@id/all_tracks_duration_playlist_detail"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_playlist_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:backgroundTint="?attr/colorSecondary"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bottom_behavior_handle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_behavior_playlists_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/track_item" />
    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/overflow_menu_bottom_sheet_playlist_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_background"
        android:backgroundTint="?attr/colorSecondary"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="280dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bottom_behavior_handle" />


        <LinearLayout
            android:id="@+id/playlist_info_layout_overflow_menu_bottom_sheet_playlist_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_overflow_menu_bottom_sheet_playlist_detail"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/track_image_rounded_corner"
                tools:backgroundTint="@color/switch_thumb_active_color" />

            <LinearLayout
                android:id="@+id/playlist_text_layout_overflow_menu_bottom_sheet_playlist_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="14dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playlist_name_overflow_menu_bottom_sheet_playlist_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/ys_display_regular"
                    android:maxLines="1"
                    android:textColor="?attr/colorOnSecondary"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/playlist_tracks_count_overflow_menu_bottom_sheet_playlist_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/ys_display_regular"
                    android:maxLines="1"
                    android:textColor="?attr/colorOnSecondary"
                    android:textFontWeight="400"
                    android:textSize="11sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/share_text_overflow_menu_bottom_sheet_playlist_detail"
            style="@style/TextOverflowMenuBottomSheetPlaylistDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_playlist_fragment" />

        <TextView
            android:id="@+id/edit_text_overflow_menu_bottom_sheet_playlist_detail"
            style="@style/TextOverflowMenuBottomSheetPlaylistDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_overflow_menu_bottom_sheet_playlist_detail" />

        <TextView
            android:id="@+id/delete_playlist_text_overflow_menu_bottom_sheet_playlist_detail"
            style="@style/TextOverflowMenuBottomSheetPlaylistDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/delete_playlist_overflow_menu_bottom_sheet_playlist_detail" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>